[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "law-n-signal-sim"
version = "0.1.0"
description = "Time-stepped Law-N network signal simulator producing network.routes-style data."
authors = [
    { name = "Peace Thabiwa", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
law-n-signal-sim = "law_n_signal_sim.cli:main"
